Fix mobile layout issues and watering

--- a/apps/apple-nest-3/src/app/App.scss
+++ b/apps/apple-nest-3/src/app/App.scss
@@ -63,13 +63,13 @@ button {
   margin: 0.1em;
 }
 img {
-  width: 180px;
-  height: 180px;
+  width: 140px;
+  height: 140px;
   margin-left: auto;
   margin-right: auto;
   display: block;
   border: 10px solid;
-  border-radius: 60px 0px 60px;
+  border-radius: 40px 0px 40px;
   margin-bottom: 10px;
 }
 
@@ -198,8 +198,8 @@ div.place-actions span {
 }
 
 .place-nav img {
-  width: 90px;
-  height: 90px;
+  width: 70px;
+  height: 70px;
   margin: 0px;
   border: none;
   border-radius: 0px;
@@ -213,7 +213,7 @@ div.place-actions span {
 
 .place-nav-left a {
   border-radius: 10px 0px 0px 10px;
-  margin-top: 69px;
+  margin-top: 49px;
   padding-right: 0px;
 }
 
